[package]
name = "librealsense2-sys"
version = "0.2.1"
authors = ["Benjamin Hinchley <benjaminhinchley@gmail.com>"]
description = "FFI Bindings to librealsense"
repository = "https://github.com/benhinchley/librealsense-sys"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.53.1"